feat: usage fold fixed

--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -24,7 +24,7 @@ This command copies the `Spinner` component to your project.
 npx install @gluestack-ui add spinner
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
