--- a/example/storybook/src/components/Forms/Button/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Button/index.stories.mdx
@@ -31,18 +31,11 @@ This command copies the `Button` component to your project.
 npx install @gluestack-ui add button
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Button } from 'components';
-
-// Using the button component
-export default () => (
-  <Button>
-    <Button.Text>Button</Button.Text>
-  </Button>
-);
 ```
 
 <br />
