--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -32,23 +32,11 @@ This command copies the `Checkbox` component to your project.
 npx install @gluestack-ui add checkbox
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Checkbox } from 'components';
-
-// Using the Checkbox component
-export default () => (
-  <Checkbox>
-    <Checkbox.Indicator>
-      <Checkbox.Icon>
-        <CheckIcon />
-      </Checkbox.Icon>
-    </Checkbox.Indicator>
-    <Checkbox.Label>Label</Checkbox.Label>
-  </Checkbox>
-);
 ```
 
 <br />
