--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -34,34 +34,11 @@ This command copies the `FormControl` component to your project.
 npx install @gluestack-ui add form-control
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { FormControl } from 'components';
-
-// Using the FormControl component
-export default () => (
-  <FormControl>
-    <FormControl.Label>
-      <FormControl.Label.Text>Password</FormControl.Label.Text>
-    </FormControl.Label>
-    <Input />
-    <FormControl.Helper>
-      <FormControl.Helper.Text>
-        Must be atleast 6 characters.
-      </FormControl.Helper.Text>
-    </FormControl.Helper>
-    <FormControl.Error>
-      <FormControl.Error.Icon>
-        <WarningIcon />
-      </FormControl.Error.Icon>
-      <FormControl.Error.Text>
-        Atleast 6 characters are required.
-      </FormControl.Error.Text>
-    </FormControl.Error>
-  </FormControl>
-);
 ```
 
 <br />
