--- a/example/storybook/src/components/Forms/Link/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Link/index.stories.mdx
@@ -30,18 +30,11 @@ This command copies the `Link` component to your project.
 npx install @gluestack-ui add link
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Link } from 'components';
-
-// Using the link component
-export default () => (
-  <Link href="https://gluestack.io/">
-    <Text>Link</Text>
-  </Link>
-);
 ```
 
 <br />
