--- a/example/storybook/src/components/Forms/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Pressable/index.stories.mdx
@@ -26,18 +26,11 @@ This command copies the `Pressable` component to your project.
 npx install @gluestack-ui add pressable
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Pressable } from 'components';
-
-// Using the Pressable component
-export default () => (
-  <Pressable>
-    <Text>Pressable</Text>
-  </Pressable>
-);
 ```
 
 <br />
