--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -30,21 +30,11 @@ This command copies the `Select` component to your project.
 npx install @gluestack-ui add select
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Select } from 'components';
-
-// Using the select component
-export default () => (
-  <Select>
-    <Select.ItemList placeholder="Select">
-      <Select.Item value="select option" label="select option" />
-    </Select.ItemList>
-    <Select.Icon></Select.Icon>
-  </Select>
-);
 ```
 
 <br />
