--- a/example/storybook/src/components/Forms/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Slider/index.stories.mdx
@@ -32,21 +32,11 @@ This command copies the `Slider` component to your project.
 npx install @gluestack-ui add slider
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Slider } from 'components';
-
-// Using the slider component
-export default () => (
-  <Slider value={50}>
-    <Slider.Track>
-      <Slider.FilledTrack />
-    </Slider.Track>
-    <Slider.Thumb />
-  </Slider>
-);
 ```
 
 <br />
