--- a/example/storybook/src/components/Forms/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Switch/index.stories.mdx
@@ -26,14 +26,11 @@ This command copies the `Switch` component to your project.
 npx install @gluestack-ui add switch
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Switch } from 'components';
-
-// Using the switch component
-export default () => <Switch />;
 ```
 
 <br />
