--- a/example/storybook/src/components/Forms/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/Forms/TextArea/index.stories.mdx
@@ -32,18 +32,11 @@ This command copies the `TextArea` component to your project.
 npx install @gluestack-ui add text-area
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { TextArea } from 'components';
-
-// Using the TextArea component
-export default () => (
-  <TextArea>
-    <TextArea.Input />
-  </TextArea>
-);
 ```
 
 <br />
