--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -27,18 +27,11 @@ This command copies the `Box` component to your project.
 npx install @gluestack-ui add box
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Box } from 'components';
-
-// Using the box component
-export default () => (
-  <Box>
-    <Text>Box</Text>
-  </Box>
-);
 ```
 
 <br />
