--- a/example/storybook/src/components/Layout/Center/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Center/index.stories.mdx
@@ -26,18 +26,11 @@ This command copies the `Center` component to your project.
 npx install @gluestack-ui add center
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Center } from 'components';
-
-// Using the center component
-export default () => (
-  <Center>
-    <Text>Center</Text>
-  </Center>
-);
 ```
 
 <br />
