--- a/example/storybook/src/components/Layout/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Divider/index.stories.mdx
@@ -26,14 +26,11 @@ This command copies the `Divider` component to your project.
 npx install @gluestack-ui add divider
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Divider } from 'components';
-
-// Using the Divider component
-export default () => <Divider />;
 ```
 
 <br />
