--- a/example/storybook/src/components/Layout/VStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/VStack/index.stories.mdx
@@ -32,19 +32,11 @@ This command copies the `VStack` component to your project.
 npx install @gluestack-ui add vstack
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { VStack } from 'components';
-
-// Using the VStack component
-export default () => (
-  <VStack>
-    <Box />
-    <Box />
-  </VStack>
-);
 ```
 
 <br />
