--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -39,14 +39,11 @@ This command copies the `Icon` component to your project.
 npx install @gluestack-ui add icon
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { AddIcon } from 'components';
-
-// Using the icon component
-export default () => <AddIcon />;
 ```
 
 <br />
