--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -31,18 +31,11 @@ This command copies the `Fab` component to your project.
 npx install @gluestack-ui add fab
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Fab } from 'components';
-
-// Using the fab component
-export default () => (
-  <Fab>
-    <Fab.Label>Fab</Fab.Label>
-  </Fab>
-);
 ```
 
 <br />
