--- a/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
@@ -31,37 +31,11 @@ This command copies the `AlertDialog` component to your project.
 npx install @gluestack-ui add alert-dialog
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { AlertDialog } from 'components';
-
-// Using the alert-dialog component
-export default () => (
-  <AlertDialog>
-    <AlertDialog.Backdrop />
-    <AlertDialog.Content>
-      <AlertDialog.Header>
-        <Heading>Confirm your request</Heading>
-        <AlertDialog.CloseButton>
-          <CloseIcon />
-        </AlertDialog.CloseButton>
-      </AlertDialog.Header>
-      <AlertDialog.Body>
-        <Text>AlertDialog Body</Text>
-      </AlertDialog.Body>
-      <AlertDialog.Footer>
-        <Button>
-          <Button.Text></Button.Text>
-        </Button>
-        <Button>
-          <Button.Text></Button.Text>
-        </Button>
-      </AlertDialog.Footer>
-    </AlertDialog.Content>
-  </AlertDialog>
-);
 ```
 
 <br />
