--- a/example/storybook/src/components/Typography/Heading/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Heading/index.stories.mdx
@@ -31,18 +31,11 @@ This command copies the `Heading` component to your project.
 npx install @gluestack-ui add heading
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Heading } from 'components';
-
-// Using the heading component
-export default () => (
-  <Heading>
-    <Text>Heading</Text>
-  </Heading>
-);
 ```
 
 <br />
