--- a/example/storybook/src/components/Typography/Text/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Text/index.stories.mdx
@@ -25,41 +25,11 @@ This command copies the `Text` component to your project.
 npx install @gluestack-ui add text
 ```
 
-## Usage
-
-<AppProvider>
-  <CodePreview
-    showComponentRenderer={true}
-    showArgsController={false}
-    metaData={{
-      code: ` 
-  <Text>gluestack</Text>
-    `,
-      transformCode: (code) => {
-        return transformedCode(code);
-      },
-      scope: { Wrapper, Text },
-      argsType: {},
-    }}
-  />
-</AppProvider>
-
-<br />
-
-## Installation
-
-```jsx
-yarn add @gluestack-ui/text
-```
-
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Text } from 'components';
-
-// Using the text component
-export default () => <Text>Text</Text>;
 ```
 
 <br />
