--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -32,18 +32,11 @@ This command copies the `Input` component to your project.
 npx install @gluestack-ui add input
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Input } from 'components';
-
-// Using the Input component
-export default () => (
-  <Input>
-    <Input.Input />
-  </Input>
-);
 ```
 
 <br />
