--- a/example/storybook/src/components/Forms/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Radio/index.stories.mdx
@@ -33,25 +33,11 @@ This command copies the `Radio` component to your project.
 npx install @gluestack-ui add radio
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Radio } from 'components';
-
-// Using the Radio component
-export default () => (
-  <Radio.Group>
-    <Radio>
-      <Radio.Indicator>
-        <Radio.Icon>
-          <CircleIcon />
-        </Radio.Icon>
-      </Radio.Indicator>
-    </Radio>
-    <Radio.Label></Radio.Label>
-  </Radio.Group>
-);
 ```
 
 <br />
