--- a/example/storybook/src/components/Layout/HStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/HStack/index.stories.mdx
@@ -32,19 +32,11 @@ This command copies the `HStack` component to your project.
 npx install @gluestack-ui add hstack
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { HStack } from 'components';
-
-// Using the HStack component
-export default () => (
-  <HStack>
-    <Box />
-    <Box />
-  </HStack>
-);
 ```
 
 <br />
