--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -31,23 +31,14 @@ This command copies the `Avatar` component to your project.
 npx install @gluestack-ui add avatar
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Avatar } from 'components';
-
-// Using the avatar component
-export default () => (
-  <Avatar size="md">
-    <Avatar.Image
-      source={{
-        uri: ImageSource,
-      }}
-    />
-  </Avatar>
-);
 ```
+
+````
 
 <br />
 
@@ -96,7 +87,7 @@ export default () => (
     </Avatar>
   </Avatar.Group>
 );
-```
+````
 
 ## API Reference
 
