--- a/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
@@ -32,42 +32,11 @@ This command copies the `Tooltip` component to your project.
 npx install @gluestack-ui add tooltip
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Tooltip } from 'components';
-
-// Using the Tooltip component
-export default () => {
-  return (
-    <Tooltip
-      placement={placement}
-      trigger={(triggerProps: any) => {
-        return (
-          <Center>
-            <Button {...triggerProps}>
-              <Button.Text>More</Button.Text>
-            </Button>
-          </Center>
-        );
-      }}
-    >
-      <Tooltip.Content>
-        <Text
-          sx={{
-            color: '$white',
-            px: '$2',
-            py: '$1',
-            fontSize: 12,
-          }}
-        >
-          {text}
-        </Text>
-      </Tooltip.Content>
-    </Tooltip>
-  );
-};
 ```
 
 <br />
