--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -11,7 +11,7 @@ import { Meta } from '@storybook/addon-docs';
 <Meta title="components/Media And Icons/Icon" />
 
 import { HStack } from './AllIcons';
-import { AddIcon, HamburgerIcon, CheckIcon } from './AllIcons';
+import { AddIcon, HamburgerIcon, CheckIcon, Icon } from './AllIcons';
 import { CircleIcon, CloseIcon, InfoIcon } from './AllIcons';
 import { WeatherMoon, MinusIcon, CloseIconFilled } from './AllIcons';
 import { MoonIcon, QuestionIcon, SearchIcon } from './AllIcons';
@@ -20,6 +20,7 @@ import { ThreeDotsIcon, PlayIcon, ShareIcon, FavouriteIcon } from './AllIcons';
 import { ArrowBackIcon, ArrowDownIcon, ArrowForwardIcon } from './AllIcons';
 import { ArrowUpIcon, ChevronDownIcon, ChevronUpIcon } from './AllIcons';
 import { ChevronLeftIcon, ChevronRightIcon, DeleteIcon } from './AllIcons';
+import { Camera } from 'lucide-react-native';
 
 import { transformedCode } from '../../../utils';
 import {
@@ -39,7 +40,11 @@ This command copies the `Icon` component to your project.
 npx install @gluestack-ui add icon
 ```
 
+Gluestack-ui provides a set of pre created icons that can be used directly in our app and we can also integrate third party icons using [AsForwarder]("https://dank.style/docs/api/as-forwarder") form [dank-style]("https://dank.style/")
+
 ## Usage
+
+### Pre built Icons
 
 ```jsx
 // import the component from your component folder
@@ -51,6 +56,18 @@ export default () => <AddIcon />;
 
 <br />
 
+### Third Party integration
+
+```jsx
+// import Icon component from your component folder
+import { Icon } from 'components';
+// Import Icon from third party library
+import { Camera } from 'lucide-react-native';
+
+// Pass the icon in as prop
+export default () => <Icon as={Camera} />;
+```
+
 # Basic
 
 <AppProvider>
@@ -61,6 +78,7 @@ export default () => <AddIcon />;
       code: `
 <HStack space="md">
   <AddIcon />
+  <Icon as={Camera} size="20" />
 </HStack>
 `,
       transformCode: (code) => {
@@ -73,6 +91,8 @@ export default () => <AddIcon />;
         ArrowBackIcon,
         ArrowDownIcon,
         HStack,
+        Icon,
+        Camera,
       },
       argsType: {},
     }}
@@ -85,14 +105,16 @@ export default () => <AddIcon />;
 The icon component consists of the following parts:
 
 ```jsx
-export default () => <AddIcon />;
+export default () => <Icon as={} />;
 ```
 
 ## API Reference
 
 ### Icon
 
-It inherits all the properties of React Native SVG's [svg](https://github.com/software-mansion/react-native-svg/tree/main/Example) component.
+Pre built icons provided by gluestack-ui inherits all the properties of React Native SVG's [svg](https://github.com/software-mansion/react-native-svg/tree/main/Example) component.
+
+The Icon components inherits all the properties that third party library provides and can be directly applied as props.
 
 ## Features
 
