feat: mdx changes

--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -177,7 +177,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           <Table.TText>false</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>{`When true, its checkbox is checked. the checkbox will be checked. You'll need to pass onChange to update it's value (since it's now controlled).`}</Table.TText>
+          <Table.TText>{`When true, the checkbox will be checked. You'll need to pass onChange to update it's value (since it's now controlled).`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
@@ -225,7 +225,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           <Table.TText>false</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>{`To manually set readonly to the checkbox.`}</Table.TText>
+          <Table.TText>{`To manually set read-only to the checkbox.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
