--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -198,7 +198,7 @@ export default () => (
           <Table.TText>false</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>{`To manually set readonly state.`}</Table.TText>
+          <Table.TText>{`To manually set read-only state.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
