--- a/example/storybook/src/components/Forms/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Radio/index.stories.mdx
@@ -173,7 +173,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           <Table.TText>false</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>{`If Table.TRue, the radio will be initially checked.`}</Table.TText>
+          <Table.TText>{`If true, the radio will be initially checked.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
@@ -237,7 +237,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           <Table.TText>false</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>{`To manually set readonly to the radio.`}</Table.TText>
+          <Table.TText>{`To manually set read-only to the radio.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
