--- a/example/storybook/src/components/Typography/Heading/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Heading/index.stories.mdx
@@ -33,7 +33,7 @@ npx install @gluestack-ui add heading
 
 ## Import
 
-```jsx
+```bash
 // import the component from your component folder
 import { Heading } from 'components';
 ```
@@ -67,7 +67,7 @@ import { Heading } from 'components';
 
 The heading component consists of the following parts:
 
-```jsx
+```bash
 export default () => <Heading>Heading</Heading>;
 ```
 
@@ -90,7 +90,7 @@ For customizing the Heading, you have to map styled view to Heading. You can ref
 
 ### Usage
 
-```jsx
+```bash
 // import the styles
 import { Root } from '../components/core/heading/styled-components';
 
