--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -18,7 +18,7 @@ we believe that creating accessible and user-friendly user interfaces should be 
 gluestack-ui originally started as part of NativeBase, a universal component library for both React and React Native. However, we realized that not everyone needs all the components from NativeBase, so we broke it down into three separate libraries:
 
 - [dank.style](https://dank.style) - The high-performing and universal CSS-in-JS library.
-- [ui.gluestack.io](https://ui.gluestack.io) - Universal, unstyled, and accessible components that adds accessibility to low-level [dank.style](https://dank.style) components or any component with the same prop type. You can even customize the components as desired.=
+- [ui.gluestack.io](https://ui.gluestack.io) - Universal, unstyled, and accessible components that adds accessibility to low-level [dank.style](https://dank.style) components or any component with the same prop type. You can even customize the components as desired.
 
 ## But aren’t React Native and React Native Web sufficient?
 
@@ -36,8 +36,6 @@ gluestack-ui builds upon the React Native Web components by adding accessibility
 
 gluestack-ui was originally part of NativeBase, but it has since evolved into a standalone library focused solely on accessibility. Unlike NativeBase, which is a complete component library that includes styling, accessibility, and a default theme, gluestack-ui focuses specifically on accessibility.
 
-While NativeBase provides a comprehensive solution for building web and mobile applications, dank offers a more streamlined and flexible solution for managing styles in your projects. This makes dank a complementary tool for developers who are already using NativeBase, or for those who want to focus specifically on styling without the added complexity of a full component library.
-
 ## Goals
 
 - Accessibility: gluestack-ui aims to provide a set of accessible components that work across different platforms and devices. The components come with accessibility features such as ARIA attributes, keyboard navigation, and focus management.
@@ -48,13 +46,13 @@ While NativeBase provides a comprehensive solution for building web and mobile a
 
 ## Non goals
 
-- Theming: gluestack-ui does not provide an out-of-the-box theming system. While the components can be customized using style props, the library does not offer a theme provider or a pre-built set of themes. (check dank.style)
+- Theming: gluestack-ui does not provide an out-of-the-box theming system. While the components can be customized using style props, the library does not offer a theme provider or a pre-built set of themes. (check [dank.style](https://dank.style))
 
 - Flexibility: gluestack-ui components are designed to work in a specific way and may not be suitable for all use cases. The library is not intended to be a one-size-fits-all solution, and developers may need to build their own components or use other libraries for certain use cases.
 
 - Design
 
-- Animation (check examples with Legend-Motion)
+- Animation (check examples with [Legend-Motion](https://legendapp.com/open-source/motion/))
 
 ## Future Considerations:
 
