--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -9,7 +9,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Installation
 
-To get started with Gluetack, you can install it using `npx` to do initial setup and add any desired component package.
+To get started with gluestack-ui, you can install it using `npx` to do initial setup and add any desired component package.
 
 ## Initialiser
 
@@ -30,7 +30,7 @@ npx gluestack-ui add button
 
 ## Component Adder
 
-We can add a new component using npx `npx gluestack-ui add <package-name>`.For example, to add the button component package, you can run the following command:
+We can add a new component using npx `npx gluestack-ui add <package-name>`. For example, to add the button component package, you can run the following command:
 
 ```bash
 npx gluestack-ui add button
@@ -94,9 +94,9 @@ function App() {
 
 This will render a button component that can be clicked and will display an alert when clicked.
 
-### For Next Projects
+### For Next.js Projects
 
-It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file. So, for nextjs projects we require `@gluestack/next-adapter` as a dependency and update \_document.js with below code:
+It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file. So, for Next.js projects we require `@gluestack/next-adapter` as a dependency and update \_document.js with below code:
 
 ```jsx
 import * as React from 'react';
