removed unnecessary content

--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -52,7 +52,7 @@ gluestack-ui was originally part of NativeBase, but it has since evolved into a 
 
 - Design
 
-- Animation (check examples with [Legend-Motion](https://legendapp.com/open-source/motion/))
+- Animation (check examples with [Legend-Motion](https://legendapp.com/))
 
 ## Future Considerations:
 
