fix: update title of pages

--- a/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
+++ b/example/storybook/src/components/DataDisplay/Badge/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Badge | UI
+title: Badge | gluestack-UI
 description: A badge component is a small graphic element used to display information such as status, count, or achievement in software/web development.
 pageTitle: Badge
 pageDescription: A badge component is a small graphic element used to display information such as status, count, or achievement in software/web development.
