--- a/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Actionsheet | UI
+title: Actionsheet | gluestack-UI
 description: A Actionsheet component is used to create clickable elements that perform an action when pressed.
 pageTitle: Actionsheet
 pageDescription: A Actionsheet component is used to create clickable elements that perform an action when pressed.
