--- a/example/storybook/src/components/Feedback/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Alert/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Alert | UI
+title: Alert | gluestack-UI
 description: Alert component is used to create clickable elements that perform an action when pressed.
 pageTitle: Alert
 pageDescription: Alert component is used to create clickable elements that perform an action when pressed.
