--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Spinner | UI
+title: Spinner | gluestack-UI
 description: Spinners gives visual cues to actions that are processing or awaiting a course change or results.
 pageTitle: Spinner
 pageDescription: Spinners gives visual cues to actions that are processing or awaiting a course change or results.
