--- a/example/storybook/src/components/Forms/Button/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Button/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Button | UI
+title: Button | gluestack-UI
 description: A Button component is used to create clickable elements that perform an action when pressed.
 pageTitle: Button
 pageDescription: A Button component is used to create clickable elements that perform an action when pressed.
