--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: FormControl | UI
+title: FormControl | gluestack-UI
 description: FormControl is used to form elements by providing context such as isInvalid, isDisabled, and isRequired.
 pageTitle: FormControl
 pageDescription: FormControl is used to form elements by providing context such as isInvalid, isDisabled, and isRequired.
