--- a/example/storybook/src/components/Forms/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Pressable/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Pressable | UI
+title: Pressable | gluestack-UI
 description: Pressable is a lower level primitive if you need more flexibility than a button and access to hover, pressed and focus events.
 pageTitle: Pressable
 pageDescription: Pressable is a lower level primitive if you need more flexibility than a button and access to hover, pressed and focus events.
