--- a/example/storybook/src/components/Forms/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Radio/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Radio | UI
+title: Radio | gluestack-UI
 description: A Radio component is used to provide a way for users to select one option from a set of predefined choices.
 pageTitle: Radio
 pageDescription: A Radio component is used to provide a way for users to select one option from a set of predefined choices.
