--- a/example/storybook/src/components/Forms/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Slider/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Slider | UI
+title: Slider | gluestack-UI
 description: This is a generic component for low level layout needs. It is similar to a div in HTML.
 pageTitle: Slider
 pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
