--- a/example/storybook/src/components/Forms/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/Forms/TextArea/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: TextArea | UI
+title: TextArea | gluestack-UI
 description: A TextArea component is used to create clickable elements that perform an action when pressed.
 pageTitle: TextArea
 pageDescription: A TextArea component is used to create clickable elements that perform an action when pressed.
