--- a/example/storybook/src/components/Layout/HStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/HStack/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: HStack | UI
+title: HStack | gluestack-UI
 description: A HStack component is used to create a horizontal stack layout for child components.
 pageTitle: HStack
 pageDescription: A HStack component is used to create a horizontal stack layout for child components.
