--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Fab | UI
+title: Fab | gluestack-UI
 description: A floating action button (FAB) is a circular icon button that hovers over content to execute a primary action in the application.
 pageTitle: Fab
 pageDescription: A floating action button (FAB) is a circular icon button that hovers over content to execute a primary action in the application.
