--- a/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/AlertDialog/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: AlertDialog | UI
+title: AlertDialog | gluestack-UI
 description: A AlertDialog component is used to create clickable elements that perform an action when pressed.
 pageTitle: AlertDialog
 pageDescription: A AlertDialog component is used to create clickable elements that perform an action when pressed.
