--- a/example/storybook/src/components/Overlay/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Menu/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Menu | UI
+title: Menu | gluestack-UI
 description: A Menu component is used to create clickable elements that perform an action when pressed.
 pageTitle: Menu
 pageDescription: A Menu component is used to create clickable elements that perform an action when pressed.
