--- a/example/storybook/src/components/Overlay/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Modal/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Modal | UI
+title: Modal | gluestack-UI
 description: A Modal component is used to create clickable elements that perform an action when pressed.
 pageTitle: Modal
 pageDescription: A Modal component is used to create clickable elements that perform an action when pressed.
