--- a/example/storybook/src/components/Typography/Heading/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Heading/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Heading | UI
+title: Heading | gluestack-UI
 description: This is a generic component for low level layout needs. It is similar to a div in HTML.
 pageTitle: Heading
 pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
