--- a/example/storybook/src/components/Typography/Text/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Text/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Text | UI
+title: Text | gluestack-UI
 description: Text allows the rendering of text and paragraphs within an interface
 pageTitle: Text
 pageDescription: Text allows the rendering of text and paragraphs within an interface.
