--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Checkbox | UI
+title: Checkbox | gluestack-UI
 description: A Checkbox component is used to provide a way for users to select one or more options from a set of predefined choices.
 pageTitle: Checkbox
 pageDescription: A Checkbox component is used to provide a way for users to select one or more options from a set of predefined choices.
