--- a/example/storybook/src/components/Forms/Tabs/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Tabs/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tabs | UI
+title: Tabs | gluestack-UI
 description: Tabs make it easy to explore and switch between different views.
 pageTitle: Tabs
 pageDescription: Tabs make it easy to explore and switch between different views.
