--- a/example/storybook/src/components/Layout/Center/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Center/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Center | UI
+title: Center | gluestack-UI
 description: This is a generic component for low level layout needs to center its children
 pageTitle: Center
 pageDescription: This is a generic component for low level layout needs to center its children.
