--- a/example/storybook/src/components/Layout/VStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/VStack/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: VStack | UI
+title: VStack | gluestack-UI
 description: A VStack component is used to create a horizontal stack layout for child components.
 pageTitle: VStack
 pageDescription: A VStack component is used to create a horizontal stack layout for child components.
