--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Avatar | UI
+title: Avatar | gluestack-UI
 description: Use the Avatar Component as a graphical representation of a person through a profile picture or image, an icon, or a string with initials.
 pageTitle: Avatar
 pageDescription: Use the Avatar Component as a graphical representation of a person through a profile picture or image, an icon, or a string with initials.
