--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Icon | UI
+title: Icon | gluestack-UI
 description: Icon component is used to create an icon in React Native. In React Native, the Icon component can be generated using a third-party accessibility-focused library that uses 'styled views' and 'svg' to define the layout, visual design, and behavior of the component.
 pageTitle: Icon
 pageDescription: Icon component is used to create an icon in React Native. In React Native, the Icon component can be generated using a third-party accessibility-focused library that uses 'styled views' and 'svg' to define the layout, visual design, and behavior of the component.
